# oculus_ros2

./: .clang-format  .clang-tidy  .codespell_words  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  READMETOO.md  TODO  tests_plan.md
cmake/: Config.cmake.in  narval_installation.cmake
include/narval_oculus/: AsyncService.h  CallbackQueue.h  Client.h  Clock.h  Oculus.h  Sonar.h  SonarClient.h  SonarDriver.h  StatusListener.h  print_utils.h  utils.h
oculus_driver/: CMakeLists.txt  package.xml
oculus_interfaces/: CMakeLists.txt  package.xml
oculus_interfaces/msg/: OculusHeader.msg  OculusPing.msg  OculusStampedPing.msg  OculusStatus.msg  OculusVersionInfo.msg  Ping.msg
oculus_ros2/: CMakeLists.txt  how_to_handle_oculus_driver_dependancy.md  how_to_handle_timestamp.md  package.xml
oculus_ros2/cfg/: default.yaml  oculus_sonar.yaml  test.yaml  tmp.yaml
oculus_ros2/dev/: .gitignore  display_oculus_file.py  display_oculus_subscriber.py  oculus_struct.hpp  oculus_subscriber_to_image.py  oculus_to_bag  oculus_to_bag.py  oculus_to_log.cpp  oculus_to_rosbag.py
oculus_ros2/dev/old/: __Oculus.h  __Recorder.h  filereader_test.cpp  oculus_to_log.cpp  oculus_to_log_v1.cpp  read_oculus_file.py
oculus_ros2/dev/rosbag2_2022_11_18-23_20_16/: rosbag2_2022_11_18-23_20_16_0.db3
oculus_ros2/include/oculus_ros2/: conversions.hpp  oculus_sonar_node.hpp  oculus_viewer_node.hpp  sonar_viewer.hpp
oculus_ros2/launch/: default.launch.py  pings_only.launch.py
oculus_ros2/scripts/: bag_to_oculus  display_oculus_file.py  oculus_subscriber_to_image.py  oculus_to_bag  oculus_to_rosbag.py  tmp.py
oculus_ros2/scripts/my_bag/: metadata.yaml  my_bag_0.db3
oculus_ros2/src/: conversions.h  jaouad_oculus_viewer_node.cpp  oculus_sonar_node.cpp  oculus_sonar_node.hpp  oculus_viewer_node.cpp  oculus_viewer_node.hpp  publisher_member_function.cpp  sonar_viewer.cpp  sonar_viewer.h  sonar_viewer.hpp  subscriber_member_function.cpp
oculus_ros2/src/rosbag2_2022_11_18-23_20_16/: metadata.yaml
oculus_ros2/tests/: tests_plan.md
oculus_ros2/tests/python/: config01.py  print_config.py  subscriber01.py
oculus_sonar/: CMakeLists.txt  package.xml
ros/: CMakeLists.txt  package.xml
ros/cfg/: OculusSonar.cfg
ros/launch/: default.launch  default.launch.py
ros/msg/: OculusFireConfig.msg  OculusHeader.msg  OculusPing.msg  OculusStatus.msg  OculusVersionInfo.msg
ros/scripts/: bag_to_oculus
ros/src/: PingRenderer.cpp  conversions.h  oculus_sonar_display.cpp  oculus_sonar_display_node.cpp  oculus_sonar_node.cpp
ros/tests/python/: config01.py
ros2/: CMakeLists.txt  package.xml
ros2/cfg/: oculus_sonar.yaml
ros2/include/: PingRenderer.h  conversions.h  oculus_sonar_display.hpp  oculus_sonar_node.hpp
ros2/launch/: default.launch.py
ros2/msg/: OculusHeader.msg  OculusStampedPing.msg  OculusStatus.msg  OculusVersionInfo.msg
ros2/src/: oculus_sonar_node copy.cpp  oculus_sonar_node.cpp
ros2/tests/python/: subscriber01.py
src/: AsyncService.cpp  Client.cpp  Sonar.cpp  SonarClient.cpp  SonarDriver.cpp  StatusListener.cpp  print_utils.cpp  utils.cpp
tests/: CMakeLists.txt
tests/src/: async_client_test.cpp  client_test.cpp  config_test.cpp  oculusfile_test.cpp  status_display.cpp  statusraw_test.cpp
tools/: CMakeLists.txt
tools/src/: oculus_display.cpp
