<?xml version="1.0"?>
<package format="3">
    <name>oculus_driver</name>
    <version>0.0.0</version>
    <description>TODO(hugoyvrn)</description>
    <maintainer email="auguste@forssea-robotics.fr">Auguste Bourgois</maintainer>

    <license>proprietary</license>

    <buildtool_depend>ament_cmake</buildtool_depend>


    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>