<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>oculus_interfaces</name>
    <version>0.0.0</version>
    <description>TODO: Package description</description>
    <maintainer email="auguste@forssea-robotics.fr">Auguste BOURGOIS</maintainer>
    <license>BSD3</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <depend>std_msgs</depend>

    <build_depend>rosidl_default_generators</build_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_cmake_cppcheck</test_depend>
    <test_depend>ament_cmake_cpplint</test_depend>
    <test_depend>ament_cmake_lint_cmake</test_depend>
    <test_depend>ament_cmake_uncrustify</test_depend>
    <test_depend>ament_cmake_xmllint</test_depend>

    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>