<?xml version="1.0"?>
<package format="3">
  <name>oculus_ros2</name>
  <version>0.0.1</version>
  <description>ROS 2 nodes for BluePrint subsea Oculus M1200d sonar</description>

  <maintainer email="auguste@forssea-robotics.fr">Auguste BOURGOIS</maintainer>

  <license>BSD3</license>

  <!-- TODO(hugoyvrn, Cleannig in dependency needed) -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>oculus_driver</exec_depend>

  <depend>Boost</depend>
  <depend>oculus_interfaces</depend>
  <!-- <depend>rqt_reconfigure</depend> -->
  <depend>rcl_interfaces</depend>
  <!-- <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>OpenCV</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
